css/main.css
 
body{
  color: #B1B9C1;
  font-size: 1em;
  font-weight: 600;
  font-family: 'Roboto', Helvetica, Arial, serif;
  width: 100%;
  text-align: center;
  padding-top: 50px; 
}

h1 {
  font-size: 24px;
  
}

h2 {
  font-size: 48px;
  color: #465058;
  margin: 40px 0 40px;
}

h1, h2 {
  font-weight: 400;
  width: 100%;
}

h3 {
  font-weight: 400;
  font-size: 24px;
  margin: 40px 0 20px;
  color: #465058;
}


ul li {
  list-style-type: none;
}

li {
 font-size: 14px;  
}

p {
  font-size: 18px; 
  margin-bottom: 40px;
}

.row {
  max-width: 1280px;
  margin: 0 auto;
  padding: 0;
}

a {
 color: #465058;
}

a:hover {
  color: #333;
}

.page-heading-primary {
  display: block;
  font-size: 3.75em;
  font-weight: 300;
  background: -webkit-linear-gradient(#3498db, #262748);
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  margin: .8em 0 .4em; 
}

.page-heading-secondary {
  display: block;
  font-size: 1.25em;
  font-weight: 500;
  letter-spacing: 2.5px;
}

#trees {
  background: linear-gradient(
      rgba(10, 149, 10, .08), 
      rgba(10, 149, 10, .08)
    ), url('../img/landscape4.jpg') no-repeat center
  center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 415px;
  padding-bottom: 600px;
}

#skills {
 margin-top: 1.25em;  
}

.subpage-nav-center {
  font-size: 18px; 
}

button {
  color: grey;  
  margin: 4px; 
}

.btn {
  background-color: transparent; 
  border-color: #B1B9C1;
}

.btn:hover {
   
    color: #262748; 
    border-color: #262748;
    cursor: pointer;
}

footer {
  margin: 80px 0;
  float: left;
  width: 100%;
} 

/*nav*/

nav {
  float: right;
}
nav a {
  transition: .35s linear;
  padding: 0 10px;
  font-weight: 500;
  font-size: 14px; 
  line-height: 60px;
  color: #B1B9C1;
  text-align: right;
}

nav a:last-child {
  padding-right: 0;
}

nav a:hover {
  color: #333;
}

nav a.active {
  color: #465058
}



/*projects*/

#img { 
 border:1px solid #B1B9C1; 
 margin: 6px 3px 3px; 
 transition: 0.25s ease;
}

.img-hover:hover {
  border-color: purple;
  transform: scale(1.1, 1.1);  
}



/*about me*/

#me {
  border-radius: 50%; 
  margin: 30px 0 80px 0;
}

.text-column {
  padding-right: 120px; 
}


/*grid*/
.grid-full {
  width: 100%;
  float: left;
}
.grid-half {
  width: 50%;
  float: left;
}
.grid-third {
  width: 27.33333%;
  margin: 0 3%;
  float: left;
}



/*media quiries*/

@media (max-width: 1500px) {
  #trees {
    margin-bottom:20px;
    height: 500px;
  
 }
}


@media (max-width: 1000px) {
  .slides p {
    font-size: 18px;
  }
  .grid-fifth {
    width: 27.333333%;
    margin: 0 3%;
  }

  #trees {
    margin-bottom:40px;
    height: 615px;
  }

  #me {
  margin-left: 0;
}

  .text-column {
  padding-right: 0; 
  }

}
@media (max-width: 700px) {
  .tagline {
    display: none;
  }
  .logo {
    display: none;
    margin: 20px auto 0;
  }
  .grid-half {
    width: 80%;
    margin: 0 10%;
  }
  .grid-third {
    width: 80%;
    margin: 0 10%;
  }
  .grid-fifth {
    width: 80%;
    margin: 0 10%;
  }
  .row {
    padding: 0 10px;
  }
  nav {
    width: 100%;
  }
  nav a {
    transition: 0s;
    width: 33.333333%;
    float: left;
    padding: 0;
    margin: 0;
    text-align: center;
  }

  #trees {
    padding-bottom:400px;
    margin-bottom:40px;
    height: 615px;
  }
   
  h4 {
    font-size: 20px;
  }

  #me {
    margin-left: 0;
  }

.text-column {
  margin-top: 40px; 
  padding-right: 0; 
  }
}

@media (max-width: 480px) {
  #trees {
  background: linear-gradient(
      rgba(10, 149, 10, .08), 
      rgba(10, 149, 10, .08)
    ), url('../img/landscape4.jpg') no-repeat center; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
    padding-bottom: 500px;
    height: 550px;
  }
}

/* end media quiries*/
 

.header {
  background-color: white;
  transition: 1s;
}

.is-sticky .header {
  background-color: black;
  z-index: 1000; 
}

.is-sticky .work {
  background: #fff;
  padding: 12px 0;
  margin: 0;
}

.subpage-nav-center {
  line-height: 60px;
  width: 100%;
  font-size: 2em;
  font-weight: 300;
  margin: 0;
  padding: 0;
  display: block;
}
 

